--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 17,
    "id": "f3f60b66",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 18,
    "id": "13294094",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 19,
    "id": "c202811e",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "id": "63fba690",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "id": "683431a5",
    "metadata": {},
    "outputs": [],
@@ -87,8 +87,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f180bf3c",
+   "metadata": {},
+   "source": [
+    "# Logistic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "71c5249d",
    "metadata": {},
    "outputs": [],
@@ -105,6 +113,86 @@
    "outputs": [],
    "source": [
     "y_pred = log_model.predict(x_test)\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0928ce9",
+   "metadata": {},
+   "source": [
+    "# SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4a6ed0d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "277fd651",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_model = SVC()\n",
+    "svm_model = svm_model.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6475f13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = svm_model.predict(x_test)\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d265aa7e",
+   "metadata": {},
+   "source": [
+    "# Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "cf5ab044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "724aca0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_model = GaussianNB()\n",
+    "nb_model = nb_model.fit(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6978119e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = nb_model.predict(x_test)\n",
     "print(classification_report(y_test, y_pred))"
    ]
   }
